--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "@sap/xssec": "^4.7.0",
     "express": "^4",
     "hdb": "^0.19.12",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "pdfkit": "^0.17.1",
+    "pdfmake": "^0.2.20"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.10.0",
     "@cap-js/sqlite": "^1",
     "@sap/cds-dk": "^8",
     "@sap/dev-cap-tools": "^1.31.0",
-    "rimraf": "^5.0.5",
-    "mbt": "^1.2.29"
+    "mbt": "^1.2.29",
+    "rimraf": "^5.0.5"
   },
   "scripts": {
     "start": "cds-serve",
@@ -36,20 +38,25 @@
     "deploy": "cf deploy mta_archives/archive.mtar --retries 1"
   },
   "cds": {
+    "server": {
+      "body_parser": {
+        "limit": "15mb"
+      }
+    },
     "sql": {
       "native_hana_associations": false
     },
     "requires": {
       "[production]": {
         "db": "hana",
-        "auth": "xsuaa"
+        "auth": "dummy"
       },
       "auth": {
         "[development]": {
           "kind": "dummy"
         },
         "[production]": {
-          "kind": "xsuaa"
+          "kind": "dummy"
         }
       }
     }
